--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/bookingrestaurant
+spring.datasource.url = jdbc:postgresql://localhost:5433/restaurantproject
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
@@ -28,6 +28,6 @@ logging.file.name=logs/Error.log
 #logging.file.path=logs/Error.log
 
 SUCCESS=Logged in successfully
-username=dramyasr
+username=chvanith
 password=pass@123
 app.message=Reading this message
